--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>hhhhhhhhhh</h1>
     <h6>fffffffffffffffffffff</h6>
     <p>cccccccccccccccccccccc</p>
-    <img src="" alt="borboleta em seu habitat">
+    <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
 </body>
 </html>
