--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>hhhhhhhhhh</h1>
-    <h6>fffffffffffffffffffff</h6>
-    <p>cccccccccccccccccccccc</p>
+    <header>
+        <h1>hhhhhhhhhh</h1>
+        <h6>fffffffffffffffffffff</h6>
+        <p>cccccccccccccccccccccc</p>
+    </header>
+
     <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
 </body>
 </html>
