--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     </header>
 
     <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
+    <section>
+        <h2>conheça nosso site</h2>
+        <p1> a</p1>
+    </section>
 </body>
 </html>
