--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>boga</h1>
-        <h6>fffffffffffffffffffff</h6>
+        <h1>Esportes olimpicos</h1>
+        <h6>conheça os</h6>
         <p>cccccccccccccccccccccc</p>
     </header>
 
     <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
     <section>
+
         <h2>conheça nosso site</h2>
         <p1> a</p1>
+    <img src="./image olym.jpg" alt="foto olimpiada">
     </section>
 </body>
 </html>
