--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 <body>
     <header>
         <h1>Esportes olimpicos</h1>
-        <h6>conheça os</h6>
-        <p>cccccccccccccccccccccc</p>
+        <h6>conheça os esportes desconhecidos das olimpiadas</h6>
+        <p>sei la</p>
     </header>
 
     <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
+    
+    
     <section>
 
         <h2>conheça nosso site</h2>
         <p1> a</p1>
-    <img src="./image olym.jpg" alt="foto olimpiada">
+    <img class="img-intro" src="./image olym.jpg" alt="foto olimpiada">
     </section>
 </body>
 </html>
