--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     </header>
 
     <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
-    
-    
-    <section>
 
+    <section class="intro">
         <h2>conheça nosso site</h2>
         <p1> a</p1>
     <img class="img-intro" src="./image olym.jpg" alt="foto olimpiada">
+
++
+    }
     </section>
 </body>
 </html>
