--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
 
     <section class="intro">
-        <h2>conheça nosso site</h2>
-        <p1> a</p1>
-    <img class="img-intro" src="./image olym.jpg" alt="foto olimpiada">
-
+        <div> <h2>conheça nosso site</h2>
+            <p1> a</p1>
+        <img class="img-intro" src="./image olym.jpg" alt="foto olimpiada">
+    </div>
+       
 +
     }
     </section>
