--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <section class="introdução"
         <h1>Esportes olimpicos</h1>
         <h6>conheça os esportes desconhecidos das olimpiadas</h6>
         <p>sei la</p>
