--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <body>
     <header>
         <section class="introdução"
-        <h1>Esportes olimpicos</h1>
-        <h6>conheça os esportes desconhecidos das olimpiadas</h6>
-        <p>sei la</p>
+        <div>
+
+            <h1>Esportes olimpicos</h1>
+            <h6>conheça os esportes desconhecidos das olimpiadas</h6>
+            <p>sei la</p>
+
+        </div>
+    
+        
     </header>
 
     <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
