--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section class="introdução"
         <div>
 
-            <h1>Esportes olimpicos</h1>
+            <h1>Linha 1</h1>
             <h6>conheça os esportes desconhecidos das olimpiadas</h6>
             <p>sei la</p>
 
