--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
             <h1>Linha 1</h1>
             <h6>conheça os esportes desconhecidos das olimpiadas</h6>
-            <p>sei la</p>
+
+            
+            <p0>sei la</p>
 
         </div>
     
