--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>documento</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
+    <link rel="stylesheet" href="./style.css"></head>
+    
 <body>
     <header>
         <section class="introdução"
@@ -14,7 +14,7 @@
             <h1>Linha 1</h1>
             <h6>conheça os esportes desconhecidos das olimpiadas</h6>
 
-            
+
             <p0>sei la</p>
 
         </div>
@@ -25,7 +25,7 @@
     <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
 
     <section class="intro">
-        <div>
+         <div>
          <h2>conheça nosso site</h2>
          <p1> a</p1>
          <img class="img-intro" src="./image olym.jpg" alt="foto olimpiada">
