--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>documento</title>
-    <link rel="stylesheet" href="./style.css"></head>
-    
+    <link rel="stylesheet" href="./style.css">
+</head>
+
 <body>
     <header>
-        <section class="introdução"
-        <div>
-
+    <section class="introdução">
+    <div>
             <h1>Linha 1</h1>
             <h6>conheça os esportes desconhecidos das olimpiadas</h6>
 
-
-            <p0>sei la</p>
+            <p>sei la</p>
 
         </div>
     
