--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div>
-       <img src="walter.webp" alt="" class="">
+       <img src="walter.webp" alt=" placeholder" 
     </div> 
 
     <div>
