--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
     </section>
     <div>
      <img src="walter.webp" alt="placeholder 1"   
+     <h5> Francisco </h5>
     </div>
 
     <div>
-       <img src="walter.webp" alt=" placeholder 2" 
+       <img src="walter.webp" alt="placeholder 2" 
+       <h6> Aydee </h6>
     </div> 
 
  
