--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <img class="img-intro" src="./image olym.jpg" alt="foto olimpiada">
 
     </section>
+    <section class="equipe">
+    
     <div>
      <img src="walter.webp" alt="placeholder 1"   
      <h5> Francisco </h5>
@@ -42,7 +44,7 @@
        <h6> Aydee </h6>
     </div> 
 
- 
+</section>
     
 </body>
 
