--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <section class="introdução">
     <div>
-            <h1>Linha 1</h1>
+            <h1>Esportes pouco conhecidos</h1>
             <h2>linha 2</h2>
 
             <p>ontem eu comi pudim</p>
