--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </section>
     <section class="equipe">
     <div>
-     <img class=foto-equipe img src="walter.webp" alt="placeholder 1"   
+     <img class=foto-equipe  src="walter.webp" alt="placeholder 1"   
      <h5> Francisco </h5>
     </div>
 
     <div>
-       <img class=foto-equipe img src="walter.webp" alt="placeholder 2" 
+       <img class=foto-equipe  src="walter.webp" alt="placeholder 2" 
        <h6> Aydee </h6>
     </div> 
 
