--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Esportes pouco conhecidos</h1>
             <h2>linha 2</h2>
 
-            <p>ontem eu comi pudim</p>
+            <p>este site ira falar sobre esportes olimpicos pouco conhecidos</p>
 
         </div>
         
