--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
     </div> 
 
 </section>
+
+<footer>
+<p> nos sigam em : rede social generica</p>
+<p> Estamos localizados na rua: João Gualberto Nº</p>
+<p> Entre em contato por 69 6969</p>
+
+
+</footer>
     
 </body>
 
