--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 </section>
 
 <footer>
-<p> nos sigam em : rede social generica</p>
+<p> Nos sigam em : @ARROBAGENRERICODOINSTAGRAM</p>
 <p> Estamos localizados na rua: João Gualberto Nº</p>
 <p> Entre em contato por 69 6969</p>
 
 
 </footer>
-    
+    <a href="https://www.cep.pr.gov.br/">Clique aqui/</a>
 </body>
 
 </html>
