--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
     <section class="introdução">
     <div>
-            <h1>Esportes pouco conhecidos</h1>
-            <h2>linha 2</h2>
-            <p>este site ira falar sobre esportes olimpicos pouco conhecidos</p>
+            <h1>Esportes olimpícos pouco conhecidos</h1>
+            <h6>a</h6>
+          <a> <p>equipe</p> <a>
 
         </div>
         
@@ -50,7 +50,7 @@
 
 
 </footer>
-    <a href="https://www.cep.pr.gov.br/">Clique aqui</a>
+    <a href="https://www.cep.pr.gov.br/">equipe</a>
 </body>
 
 </html>
