--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
 
     </section>
-    <section class="equipe">
+    <section id="equipe">
     <div>
      <img class=foto-equipe  src="walter.webp" alt="placeholder 1"   
      <h5> Francisco </h5>
