--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 </footer>
-    <a href="https://www.cep.pr.gov.br/">equipe</a>
+    <a href="https://www.cep.pr.gov.br/">#equipe</a>
 </body>
 
 </html>
