--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>trabalho merda</title>
+    <title>trabalho </title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -50,7 +50,7 @@
 
 
 </footer>
-    <a href="https://www.cep.pr.gov.br/">#equipe</a>
+    <a href="https://www.cep.pr.gov.br/">clique aqui</a>
 </body>
 
 </html>
