--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="introdução">
     <div>
             <h1>Esportes olimpícos pouco conhecidos</h1>
-            <h6>a</h6>
+            <h6></h6>
          <a href="#equipe">equipe</a>  
 
         </div>
@@ -23,8 +23,8 @@
 
     <section class="intro">
          <div>
-         <h1>aaa</h1>
-         <p1>   aaaa   </p1>
+         <h1>Esgrima</h1>
+         <p1>   A esgrima é um esporte de duelos, onde os atletas utilizam armas brancas classificadas como florete, espada e sabre para competir. Este esporte é milenar, sendo praticado à pelo menos 3 mil anos </p1>
          
     </div>
     
