--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
          <h1>ESGRIMA</h1>
          <p1>   A esgrima é um esporte de duelos, onde os atletas utilizam armas brancas classificadas como florete, espada e sabre para competir. Este esporte é milenar, sendo praticado à pelo menos 3 mil anos </p1>
          
+         <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
 
          <h2>BOCHA ADAPTADA</h2>
          <p2>   O bocha é um esporte da família dos jogos de bola , vinculado estreitamente com boliche. Bocha, também chamado de boccia, é um jogo estratégico com uma linhagem antiga. As bochas devem ser lançadas partindo do ar e não do solo. Além de tentar acertar o alvo, os jogadores podem tentar eliminar as bochas do adversários, distanciando-as do bolim, liberando caminho para futuras jogadas. Vence a disputa a equipe que tiver a bocha mais próxima do bolim ao final do lançamento das bochas. pode ser considerado um jogo terapêutico.</p2>
