--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         
     </header>
 
-    <img src="./borboletas-e-mariposas-167-.webp" alt="borboleta em seu habitat">
+    
+    <img src="Clube-Paulistano-curso-esgrima.jpg" alt="borboleta em seu habitat">
 
     <section class="intro">
          <div>
