--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          
         
          <h2>BOCHA ADAPTADA</h2>
-         <p1>   O bocha é um esporte da família dos jogos de bola , vinculado estreitamente com boliche. Bocha, também chamado de boccia, é um jogo estratégico com uma linhagem antiga. As bochas devem ser lançadas partindo do ar e não do solo. Além de tentar acertar o alvo, os jogadores podem tentar eliminar as bochas do adversários, distanciando-as do bolim, liberando caminho para futuras jogadas. Vence a disputa a equipe que tiver a bocha mais próxima do bolim ao final do lançamento das bochas. pode ser considerado um jogo terapêutico.</p1>
+         <p1>   O bocha é um esporte da família dos jogos de bola , vinculado estreitamente com boliche. Bocha, também chamado de boccia, é um jogo estratégico com uma linhagem antiga. As bochas devem ser lançadas partindo do ar e não do solo. Além de tentar acertar o alvo, os jogadores podem tentar eliminar as bochas do adversários, distanciando-as do bolim, liberando caminho para futuras jogadas. Vence a disputa a equipe que tiver a bocha mais próxima do bolim ao final do lançamento das bochas. Pode ser considerado um jogo terapêutico.</p1>
     </div>
 
     <img src="unnamed.jpg" alt="borboleta em seu habitat">
