--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <img src="unnamed.jpg" alt="borboleta em seu habitat">
 
 
+    <h1>ESCALADA OLÍMPICA </h1>
+    
+<p1>A Escalada Esportiva é uma disciplina moderna originada da escalada tradicional. Existem três disciplinas diferentes: boulder, lead e speed. Em todos eles são utilizadas âncoras permanentes fixadas em uma parede artificial para a escalada. </p1>
+
+<img src="unnamed.jpg" alt="borboleta em seu habitat">
+
 
 
     
