--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </section>
     <section id="equipe">
     <div>
-     <img class="foto-equipe" src="walter.webp" alt="placeholder 1"   >
+     <img class="foto-equipe" src="fdd01.jpeg" alt="placeholder 1"   >
      <h5> Francisco </h5>
     </div>
 
     <div>
-       <img class="foto-equipe"  src="walter.webp" alt="placeholder 2" >
+       <img class="foto-equipe"  src="fdd02.jpeg" alt="placeholder 2" >
        <h6> Aydee </h6>
     </div> 
 
