--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 </section>
 
 <footer>
-<p> Nos sigam em : @ARROBAGENRERICODOINSTAGRAM</p>
-<p> Estamos localizados na rua: João Gualberto Nº</p>
-<p> Entre em contato por 69 6969</p>
+<p> Nos sigam em : @arrobagenericoisragram</p>
+<p> Estamos localizados na rua: João Gualberto Nº 250</p>
+<p> Entre em contato por 41 96969 6969 </p>
 
 
 </footer>
