--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </section>
 
 <footer>
-<p> Nos sigam em : @arrobagenericoisragram</p>
+<p> Nos sigam em : @arrobagenericoinstagram</p>
 <p> Estamos localizados na rua: João Gualberto Nº 250</p>
 <p> Entre em contato por 41 96969 6969 </p>
 
