--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="intro">
          <div>
          <h1>ESGRIMA</h1>
-         <p1>   A esgrima é um esporte de duelos, onde os atletas utilizam armas brancas classificadas como florete, espada e sabre para competir. Este esporte é milenar, sendo praticado à pelo menos 3 mil anos </p1>
+         <p1>   A esgrima é um esporte de duelos, onde os atletas utilizam armas brancas classificadas como florete, espada e sabre para competir. Este esporte é milenar, sendo praticado à pelo menos 3 mil anos. </p1>
          
         
          <h1>BOCHA ADAPTADA</h1>
