--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
                 em uma parede artificial para a escalada. </p1>
         </div>
 
+        <div>
+            <h1> FUTEBOL PARA CEGOS</h1>
+            <img src="aaaaaaaaaaaaa.webp" alt="borboleta em seu habitat">
+            <p1> O futebol de cegos é exclusivo para cegos ou deficientes visuais. As partidas, normalmente, são em uma
+                quadra de futsal adaptada, mas, desde os Jogos Paralímpicos de Atenas 2004, também têm sido praticadas
+                em campos de grama sintética. O goleiro tem visão total e não pode ter participado de competições
+                oficiais da Fifa nos últimos cinco anos.
+            </p1>
+
+
+
+        </div>
+
 
 
 
